--- a/LaunchMateTray/LaunchMateTray.csproj
+++ b/LaunchMateTray/LaunchMateTray.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Resources\LaunchMateTrayIcon.ico</ApplicationIcon>
+    <StartupObject>LaunchMateTray.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\LaunchMateTrayIcon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
