--- a/LaunchMateTray/LaunchMateTray.csproj
+++ b/LaunchMateTray/LaunchMateTray.csproj
@@ -8,6 +8,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Resources\LaunchMateTrayIcon.ico</ApplicationIcon>
     <StartupObject>LaunchMateTray.Program</StartupObject>
+	<Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
