--- a/LaunchMateTray/LaunchMateTray.csproj
+++ b/LaunchMateTray/LaunchMateTray.csproj
@@ -9,6 +9,7 @@
     <ApplicationIcon>Resources\LaunchMateTrayIcon.ico</ApplicationIcon>
     <StartupObject>LaunchMateTray.Program</StartupObject>
 	<Version>0.0.1</Version>
+	<Company>Evolke</Company>
   </PropertyGroup>
 
   <ItemGroup>
